salesforce-ticketing-system/ticketing-system/force-app/main/default/objects/Ticket__c/Ticket__c.object-meta.xml
<CustomObject>
    <description>Used to store the tickets which are raised by User</description>
    <label>Ticket</label>
    <nameField>
        <label>Ticket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>