salesforce-ticketing-system/ticketing-system/force-app/main/default/objects/Ticket__c/fields/Department_Id__c.field-meta.xml
<CustomField>
    <fullName>Department_Id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Department Id</label>
    <referenceTo>Role__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>