salesforce-ticketing-system/ticketing-system/force-app/main/default/objects/Ticket__c/fields/Ticket_Department__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Department__c</fullName>
    <label>Ticket Department</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>