salesforce-ticketing-system/ticketing-system/force-app/main/default/objects/Ticket__c/fields/Ticket_Description__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Description__c</fullName>
    <label>Ticket Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>