salesforce-ticketing-system/ticketing-system/force-app/main/default/objects/Ticket__c/fields/Ticket_Id__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Id__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Ticket Id</label>
    <type>AutoNumber</type>
</CustomField>