salesforce-ticketing-system/ticketing-system/force-app/main/default/objects/Ticket__c/fields/Ticket_Status__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Status__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ticket Status</label>
    <referenceTo>Ticket_Status__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>