salesforce-ticketing-system/ticketing-system/force-app/main/default/objects/Ticket__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>User</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Tickets (User)</relationshipLabel>
    <relationshipName>Tickets1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>